# Gazebo_Strategy_Plugin

./: .gitignore  README.md  bashrc.txt  index.html  params.json
TurtleBot_Hardware/: empty.yaml  exp_remote_navi.bash
guitest/: build.bash  robot.bash  runprogram.bash  syste_gui.cc.backup  system_mouse.cc  system_robot.cc
guitest/gazebo_move/src/: gazebo_move.cc
move_plugin/: readme.txt
move_plugin/src/gazebo_move_v2/: CMakeLists.txt  package.xml
move_plugin/src/gazebo_move_v2/launch/: generic_turtle.launch  multi_turtle.launch
move_plugin/src/gazebo_move_v2/launch/includes/: empty_world.launch  generic_turtle.launch  move_base.launch.xml
move_plugin/src/gazebo_move_v2/maps/: empty.pgm  empty.yaml
move_plugin/src/gazebo_move_v2/scripts/: exp_remote.bash  spawn_multi_robots
move_plugin/src/gazebo_move_v2/src/: gazebo_move_v2.cc  gazebo_move_v2.hh
turtle/: readme.txt  ros-indigo-turtlebot-gazebo_2.2.2-0trusty-20160420-100449-0700_amd64.deb
turtle/kobiplug_overlay/devel/: .catkin  .rosinstall  setup.sh
turtle/kobiplug_overlay/devel/lib/kobuki_keyop/: keyop
turtle/kobiplug_overlay/devel/lib/pkgconfig/: kobuki_auto_docking.pc  kobuki_bumper2pc.pc  kobuki_capabilities.pc  kobuki_controller_tutorial.pc  kobuki_dashboard.pc  kobuki_description.pc  kobuki_gazebo.pc  kobuki_gazebo_plugins.pc  kobuki_keyop.pc  kobuki_node.pc  kobuki_qtestsuite.pc  kobuki_random_walker.pc  kobuki_rapps.pc  kobuki_rviz_launchers.pc  kobuki_safety_controller.pc  kobuki_testsuite.pc
turtle/kobiplug_overlay/devel/lib/python2.7/dist-packages/kobuki_dashboard/: __init__.py
turtle/kobiplug_overlay/devel/lib/python2.7/dist-packages/kobuki_qtestsuite/: __init__.py
turtle/kobiplug_overlay/devel/lib/python2.7/dist-packages/kobuki_testsuite/: __init__.py
turtle/kobiplug_overlay/devel/share/kobuki_auto_docking/cmake/: kobuki_auto_dockingConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_bumper2pc/cmake/: kobuki_bumper2pcConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_capabilities/cmake/: kobuki_capabilitiesConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_controller_tutorial/cmake/: kobuki_controller_tutorialConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_dashboard/cmake/: kobuki_dashboardConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_description/cmake/: kobuki_descriptionConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_gazebo/cmake/: kobuki_gazeboConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_gazebo_plugins/cmake/: kobuki_gazebo_pluginsConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_keyop/cmake/: kobuki_keyopConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_node/cmake/: kobuki_nodeConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_qtestsuite/cmake/: kobuki_qtestsuiteConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_random_walker/cmake/: kobuki_random_walkerConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_rapps/cmake/: kobuki_rappsConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_rviz_launchers/cmake/: kobuki_rviz_launchersConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_safety_controller/cmake/: kobuki_safety_controllerConfig.cmake
turtle/kobiplug_overlay/devel/share/kobuki_testsuite/cmake/: kobuki_testsuiteConfig.cmake
turtle/kobiplug_overlay/src/: .rosinstall  .rosinstall.bak
turtle/overlayws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
turtle/overlayws/devel/include/pr2_gazebo_plugins/: ModelJointsState.h  PlugCommand.h  SetModelsJointsStatesRequest.h  SetModelsJointsStatesResponse.h
turtle/overlayws/devel/lib/pkgconfig/: pr2_controller_configuration_gazebo.pc  pr2_gazebo.pc  pr2_gazebo_plugins.pc  turtlebot_gazebo.pc  turtlebot_stage.pc  turtlebot_stdr.pc
turtle/overlayws/devel/lib/python2.7/dist-packages/pr2_gazebo_plugins/msg/: _ModelJointsState.py  _PlugCommand.py  __init__.py
turtle/overlayws/devel/lib/python2.7/dist-packages/pr2_gazebo_plugins/srv/: _SetModelsJointsStates.py  __init__.py
turtle/overlayws/devel/share/pr2_controller_configuration_gazebo/cmake/: pr2_controller_configuration_gazeboConfig.cmake
turtle/overlayws/devel/share/pr2_gazebo/cmake/: pr2_gazeboConfig.cmake
turtle/overlayws/devel/share/pr2_gazebo_plugins/cmake/: pr2_gazebo_plugins-msg-extras.cmake  pr2_gazebo_plugins-msg-paths.cmake  pr2_gazebo_pluginsConfig-version.cmake  pr2_gazebo_pluginsConfig.cmake
turtle/overlayws/devel/share/turtlebot_gazebo/cmake/: turtlebot_gazeboConfig.cmake
turtle/overlayws/devel/share/turtlebot_stage/cmake/: turtlebot_stageConfig.cmake
turtle/overlayws/devel/share/turtlebot_stdr/cmake/: turtlebot_stdrConfig.cmake
turtle/overlayws/src/: .rosinstall  .rosinstall.bak
wkspace/guitest/: CMakeLists.txt  CMakeLists.txt~  GUIExampleSpawnWidget.cc  readme.txt  robot.bash~  runprogram.bash  runprogram.bash~  system_mouse.cc  system_robot.cc
wkspace/guitest/gazebo_move/: CMakeLists.txt  CMakeLists.txt~
wkspace/guitest_backup/: GUIExampleSpawnWidget.hh
wkspace/move_plugin/devel/: .catkin  .rosinstall  setup.sh
wkspace/move_plugin/devel/lib/pkgconfig/: gazebo_move.pc  gazebo_move_v2.pc  gazebo_plug.pc
wkspace/move_plugin/devel/share/gazebo_move/cmake/: gazebo_moveConfig.cmake
wkspace/move_plugin/devel/share/gazebo_move_v2/cmake/: gazebo_move_v2Config.cmake
wkspace/move_plugin/devel/share/gazebo_plug/cmake/: gazebo_plugConfig.cmake
wkspace/move_plugin/src/gazebo_move/: CMakeLists.txt  CMakeLists.txt~
wkspace/move_plugin/src/gazebo_move/src/: gazebo_move.cc  gazebo_move.cpp  gazebo_move.hh  gazebo_move.hh.soon
wkspace/move_plugin/src/gazebo_move_v2/: CMakeLists.txt  CMakeLists.txt~
wkspace/move_plugin/src/gazebo_move_v2/launch/: empty_world.launch  gazebo_move.launch  gazebo_move.launch~
wkspace/move_plugin/src/gazebo_move_v2/src/: gazebo_move_v2.cc  gazebo_move_v2.cc~  gazebo_move_v2.hh  gazebo_move_v2.hh~
wkspace/move_plugin/src/gazebo_plug/: CMakeLists.txt  package.xml
wkspace/move_plugin/src/gazebo_plug/src/: gazebo_plug.cpp
(+10 files in other folders)
